--- a/Simulator.html
+++ b/Simulator.html
@@ -30,17 +30,21 @@
         const controls = new THREE.OrbitControls(camera, renderer.domElement);
 
         // Background with moving stars
-        const starGeometry = new THREE.BufferGeometry();
-        const starVertices = [];
-        for (let i = 0; i < 6000; i++) {
-            starVertices.push((Math.random() - 0.5) * 2000);
-            starVertices.push((Math.random() - 0.5) * 2000);
-            starVertices.push((Math.random() - 0.5) * 2000);
+        function createStars() {
+            const starGeometry = new THREE.BufferGeometry();
+            const starVertices = [];
+            for (let i = 0; i < 6000; i++) {
+                starVertices.push((Math.random() - 0.5) * 2000);
+                starVertices.push((Math.random() - 0.5) * 2000);
+                starVertices.push((Math.random() - 0.5) * 2000);
+            }
+            starGeometry.setAttribute('position', new THREE.Float32BufferAttribute(starVertices, 3));
+            const starMaterial = new THREE.PointsMaterial({ color: 0xffffff, size: 0.5 });
+            const stars = new THREE.Points(starGeometry, starMaterial);
+            scene.add(stars);
+            return stars;
         }
-        starGeometry.setAttribute('position', new THREE.Float32BufferAttribute(starVertices, 3));
-        const starMaterial = new THREE.PointsMaterial({ color: 0xffffff });
-        const stars = new THREE.Points(starGeometry, starMaterial);
-        scene.add(stars);
+        const stars = createStars();
 
         // Nucleus
         const nucleusMaterial = new THREE.MeshBasicMaterial({ color: 0xff0000 });
@@ -50,7 +54,7 @@
         function addProton() {
             const protonGeometry = new THREE.SphereGeometry(0.5, 32, 32);
             const proton = new THREE.Mesh(protonGeometry, nucleusMaterial);
-            proton.position.set(Math.random() - 0.5, Math.random() - 0.5, Math.random() - 0.5);
+            proton.position.set((Math.random() - 0.5) * 2, (Math.random() - 0.5) * 2, (Math.random() - 0.5) * 2);
             scene.add(proton);
             nucleusParticles.push(proton);
         }
@@ -58,7 +62,7 @@
         function addNeutron() {
             const neutronGeometry = new THREE.SphereGeometry(0.5, 32, 32);
             const neutron = new THREE.Mesh(neutronGeometry, neutronMaterial);
-            neutron.position.set(Math.random() - 0.5, Math.random() - 0.5, Math.random() - 0.5);
+            neutron.position.set((Math.random() - 0.5) * 2, (Math.random() - 0.5) * 2, (Math.random() - 0.5) * 2);
             scene.add(neutron);
             nucleusParticles.push(neutron);
         }
