--- a/Simulator.html
+++ b/Simulator.html
@@ -26,8 +26,13 @@
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
 
-        // Camera controls
+        // Camera controls with mouse drag support
         const controls = new THREE.OrbitControls(camera, renderer.domElement);
+        controls.enableDamping = true;
+        controls.dampingFactor = 0.05;
+        controls.screenSpacePanning = true;
+        controls.minDistance = 2;
+        controls.maxDistance = 50;
 
         // Background with moving stars
         function createStars() {
