--- a/Simulator.html
+++ b/Simulator.html
@@ -3,135 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Atom Simulator</title>
+    <title>Full Screen Embed</title>
     <style>
-        body { margin: 0; overflow: hidden; display: flex; justify-content: center; align-items: center; height: 100vh; background-color: #000; }
-        canvas { display: block; }
-        #controls {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            color: white;
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
         }
-        button {
-            background: linear-gradient(45deg, #ff0000, #ff7300);
+        iframe {
+            width: 100%;
+            height: 100%;
             border: none;
-            color: white;
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: transform 0.2s, box-shadow 0.2s;
-        }
-        button:hover {
-            transform: scale(1.1);
-            box-shadow: 0px 0px 10px rgba(255, 115, 0, 0.7);
         }
     </style>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/controls/OrbitControls.js"></script>
 </head>
 <body>
-    <div id="controls">
-        <button onclick="addProton()">Add Proton</button>
-        <button onclick="addNeutron()">Add Neutron</button>
-        <button onclick="addElectron()">Add Electron</button>
-    </div>
-    <script>
-        // Scene setup
-        const scene = new THREE.Scene();
-        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-        const renderer = new THREE.WebGLRenderer();
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        document.body.appendChild(renderer.domElement);
-
-        // Camera controls with mouse drag support
-        const controls = new THREE.OrbitControls(camera, renderer.domElement);
-        controls.enableDamping = true;
-        controls.dampingFactor = 0.05;
-        controls.screenSpacePanning = true;
-        controls.minDistance = 2;
-        controls.maxDistance = 50;
-
-        // Ambient light
-        const light = new THREE.AmbientLight(0xffffff, 1);
-        scene.add(light);
-
-        // Background with moving stars
-        function createStars() {
-            const starGeometry = new THREE.BufferGeometry();
-            const starVertices = [];
-            for (let i = 0; i < 6000; i++) {
-                starVertices.push((Math.random() - 0.5) * 2000);
-                starVertices.push((Math.random() - 0.5) * 2000);
-                starVertices.push((Math.random() - 0.5) * 2000);
-            }
-            starGeometry.setAttribute('position', new THREE.Float32BufferAttribute(starVertices, 3));
-            const starMaterial = new THREE.PointsMaterial({ color: 0xffffff, size: 0.5 });
-            const stars = new THREE.Points(starGeometry, starMaterial);
-            scene.add(stars);
-            return stars;
-        }
-        const stars = createStars();
-
-        // Nucleus
-        const nucleusMaterial = new THREE.MeshBasicMaterial({ color: 0xff0000 });
-        const neutronMaterial = new THREE.MeshBasicMaterial({ color: 0x888888 });
-        let nucleusParticles = [];
-
-        function addProton() {
-            const protonGeometry = new THREE.SphereGeometry(0.5, 32, 32);
-            const proton = new THREE.Mesh(protonGeometry, nucleusMaterial);
-            proton.position.set((Math.random() - 0.5) * 2, (Math.random() - 0.5) * 2, (Math.random() - 0.5) * 2);
-            scene.add(proton);
-            nucleusParticles.push(proton);
-        }
-
-        function addNeutron() {
-            const neutronGeometry = new THREE.SphereGeometry(0.5, 32, 32);
-            const neutron = new THREE.Mesh(neutronGeometry, neutronMaterial);
-            neutron.position.set((Math.random() - 0.5) * 2, (Math.random() - 0.5) * 2, (Math.random() - 0.5) * 2);
-            scene.add(neutron);
-            nucleusParticles.push(neutron);
-        }
-
-        // Electrons
-        const electronMaterial = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
-        let electrons = [];
-        const radius = 5;
-
-        function addElectron() {
-            const electronGeometry = new THREE.SphereGeometry(0.2, 16, 16);
-            const electron = new THREE.Mesh(electronGeometry, electronMaterial);
-            scene.add(electron);
-            electrons.push({ mesh: electron, angle: Math.random() * Math.PI * 2 });
-        }
-
-        camera.position.z = 10;
-
-        // Animation loop
-        function animate() {
-            requestAnimationFrame(animate);
-            electrons.forEach(electron => {
-                electron.angle += 0.02;
-                electron.mesh.position.x = radius * Math.cos(electron.angle);
-                electron.mesh.position.z = radius * Math.sin(electron.angle);
-            });
-            stars.rotation.y += 0.0005; // Slow star movement
-            controls.update();
-            renderer.render(scene, camera);
-        }
-        animate();
-
-        // Responsive window resizing
-        window.addEventListener('resize', () => {
-            renderer.setSize(window.innerWidth, window.innerHeight);
-            camera.aspect = window.innerWidth / window.innerHeight;
-            camera.updateProjectionMatrix();
-        });
-    </script>
+    <iframe src="https://phet.colorado.edu/sims/html/build-an-atom/latest/build-an-atom_all.html" allowfullscreen></iframe>
 </body>
 </html>
