--- a/Simulator.html
+++ b/Simulator.html
@@ -9,12 +9,38 @@
             text-align: center;
             font-family: Arial, sans-serif;
         }
+        .loading-screen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            font-size: 24px;
+        }
+        .spinner {
+            width: 50px;
+            height: 50px;
+            border: 5px solid lightgray;
+            border-top: 5px solid black;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+        }
+        @keyframes spin {
+            from { transform: rotate(0deg); }
+            to { transform: rotate(360deg); }
+        }
         .container {
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             flex-direction: column;
+            display: none;
         }
         .nucleus {
             width: 100px;
@@ -44,9 +70,14 @@
         }
     </style>
 </head>
-<body>
-    <div class="container">
+<body onload="setTimeout(hideLoading, 2000)">
+    <div class="loading-screen" id="loading-screen">
+        <div class="spinner"></div>
+        <p>LOADING...</p>
+    </div>
+    <div class="container" id="main-container">
         <h1>Atom Builder</h1>
+        <div id="element-name">Element: Unknown</div>
         <div class="nucleus" id="nucleus"></div>
         <div class="controls">
             <button onclick="addParticle('proton')">Add Proton</button>
@@ -55,6 +86,13 @@
         </div>
     </div>
     <script>
+        let protonCount = 0;
+        
+        function hideLoading() {
+            document.getElementById('loading-screen').style.display = 'none';
+            document.getElementById('main-container').style.display = 'flex';
+        }
+
         function addParticle(type) {
             const nucleus = document.getElementById('nucleus');
             const particle = document.createElement('div');
@@ -62,6 +100,11 @@
             particle.style.left = Math.random() * 80 + 'px';
             particle.style.top = Math.random() * 80 + 'px';
             nucleus.appendChild(particle);
+            
+            if (type === 'proton') {
+                protonCount++;
+                updateElementName();
+            }
         }
 
         function addElectron() {
@@ -71,6 +114,11 @@
             electron.style.left = Math.random() * window.innerWidth + 'px';
             electron.style.top = Math.random() * window.innerHeight + 'px';
             body.appendChild(electron);
+        }
+
+        function updateElementName() {
+            const elements = ["Unknown", "Hydrogen", "Helium", "Lithium", "Beryllium", "Boron", "Carbon", "Nitrogen", "Oxygen", "Fluorine", "Neon"];
+            document.getElementById('element-name').innerText = "Element: " + (elements[protonCount] || "Unknown");
         }
     </script>
 </body>
