--- a/Simulator.html
+++ b/Simulator.html
@@ -47,6 +47,14 @@
             left: 20px;
             z-index: 10;
         }
+        .element-name {
+            position: absolute;
+            top: 10px;
+            right: 20px;
+            color: white;
+            font-size: 24px;
+            font-family: Arial, sans-serif;
+        }
         button {
             margin: 5px;
             padding: 10px;
@@ -68,6 +76,7 @@
         <button onclick="addNeutron()">Add Neutron</button>
         <button onclick="addElectron()">Add Electron</button>
     </div>
+    <div class="element-name" id="element-name">Element: Unknown</div>
     <script>
         function hideLoading() {
             document.getElementById('loading-screen').style.display = 'none';
@@ -84,6 +93,9 @@
         scene.add(nucleus);
 
         const electrons = [];
+        let protonCount = 0;
+        const elements = ["Unknown", "Hydrogen", "Helium", "Lithium", "Beryllium", "Boron", "Carbon", "Nitrogen", "Oxygen", "Fluorine", "Neon"];
+
         const protonMaterial = new THREE.MeshStandardMaterial({ color: 'red', emissive: 'red', emissiveIntensity: 3, roughness: 0.3, metalness: 0.8 });
         const neutronMaterial = new THREE.MeshStandardMaterial({ color: 'blue', emissive: 'blue', emissiveIntensity: 3, roughness: 0.3, metalness: 0.8 });
         const electronMaterial = new THREE.MeshStandardMaterial({ color: 'green', emissive: 'green', emissiveIntensity: 3, roughness: 0.3, metalness: 0.8 });
@@ -105,6 +117,8 @@
         function addProton() {
             const proton = createSphere(protonMaterial, [Math.random() - 0.5, Math.random() - 0.5, Math.random() - 0.5]);
             nucleus.add(proton);
+            protonCount++;
+            updateElementName();
         }
 
         function addNeutron() {
@@ -116,6 +130,11 @@
             const electron = createSphere(electronMaterial, [2, 0, 0], 0.15);
             scene.add(electron);
             electrons.push({ mesh: electron, angle: Math.random() * Math.PI * 2, radius: 2 + Math.random() });
+        }
+
+        function updateElementName() {
+            let element = elements[protonCount] || "Unknown";
+            document.getElementById('element-name').innerText = `Element: ${element}`;
         }
 
         camera.position.z = 5;
